update: document PIT mutation testing setup and InMemoryCartRepository behavior in README.md